--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-    margin: 10px 720px 10px 720px;
+    margin: 20px 720px 20px 720px;
+    margin-bottom: 20px;
     line-height: 20px;
     font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
 }
